--- a/home/index.html
+++ b/home/index.html
@@ -132,7 +132,7 @@
 									</div>
 									<div class="row mt-1">
 										<div class="col">
-											<label class="form-label">Ask me about pint prices or tell me about a new one
+											<label class="form-label">Tell me about a new pint price<!--Ask me about pint prices or tell me about a new one-->
 												<!--a href="#" class="link-info text-decoration-none" data-bs-toggle="collapse" data-bs-target="#agent_info">
 													<span class="ms-2">
 														<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-square text-secondary" viewBox="0 0 16 16">
@@ -492,8 +492,7 @@
 			var app = angular.module('app', []);
 			app.controller('appCtrl', function($scope, $http, $location, $window) 
 			{
-				$scope.api_path = "api.howmuchisapint.com/service";
-				$scope.service_path = "https://" + $scope.api_path;
+				$scope.service_path = "https://api.howmuchisapint.com/service";
 
 				$scope.clean = function()
 				{
@@ -679,21 +678,58 @@
 				}
 
 				$http.get('https://api.ipgeolocation.io/getip?apiKey=7109be59140c4b538dfc3bacb50a241a').then(
-					function(response)
-					{
-						console.log('ip is ' + response.data.ip);
-						$http.get('https://api.ipgeolocation.io/ipgeo?ip=' + response.data.ip + '&apiKey=7109be59140c4b538dfc3bacb50a241a').then(
-							function(response)
+				function(response)
+				{
+					console.log('ip is ' + response.data.ip);
+					$http.get('https://api.ipgeolocation.io/ipgeo?ip=' + response.data.ip + '&apiKey=7109be59140c4b538dfc3bacb50a241a').then(
+						function(response)
+						{
+							//$scope.user = 'guest-' + response.data.ip
+							$scope.home_country = response.data.country_name;
+							$scope.home_town = response.data.city;
+							$scope.home_city = response.data.district;
+							$scope.home_pc = response.data.zipcode;
+							console.log($scope.home_country+ ','+$scope.home_city+','+$scope.home_town+','+$scope.home_pc);
+						},function(response){}
+					);
+				})
+
+				$scope.set_location = function(coords)
+				{
+					$scope.home_country = '';
+					$scope.home_city = '';
+					$scope.home_town = '';
+					$scope.home_pc = '';
+		    		$http.get('https://maps.googleapis.com/maps/api/geocode/json?latlng=' + coords + '&key=AIzaSyDB-gk_9KWXlZ7eWj-SYToR8v5DTTI6T00').
+						then(function(response)
+						{
+							console.log(response.data);
+							for (res in response.data.results)
 							{
-								//$scope.user = 'guest-' + response.data.ip
-								$scope.home_country = response.data.country_name;
-								$scope.home_town = response.data.city;
-								$scope.home_city = response.data.district;
-								$scope.home_pc = response.data.zipcode;
-							},function(response){}
-						);
-					},function(response){}
-				);
+								for (add_comp in response.data.results[res]['address_components'])
+								{
+									address = response.data.results[res]['address_components'][add_comp];
+									if (address['types'][0] == 'country')
+										$scope.home_country = address['long_name'];
+									else if (address['types'][0] == 'administrative_area_level_2')
+										$scope.home_city = address['long_name'];
+									else if (address['types'][0] == 'postal_town')
+										$scope.home_town = address['long_name'];
+									else if (address['types'][0] == 'locality')
+										$scope.home_town = address['long_name'];
+									else if (address['types'][0] == 'postal_code')
+										$scope.home_pc = address['long_name'];
+								}
+							}
+							if ($scope.home_city == '')
+							{
+								$scope.home_city = $scope.home_town;
+							}
+							console.log($scope.home_country+ ','+$scope.home_city+','+$scope.home_town+','+$scope.home_pc);
+							$scope.login()
+			  		});
+
+				}
 
 
 				$scope.accept_cookies = function()
@@ -1662,13 +1698,13 @@
 					}
 				}
 			});
-//	        navigator.geolocation.getCurrentPosition(showPosition);
-//			function showPosition(position) 
-//			{
-//				var coords = position.coords.latitude + ',' + position.coords.longitude;
-//			    console.log('coords=' + coords)
-//				angular.element(document.querySelector('[ng-controller="appCtrl"]')).scope().set_location(coords);
-//			}
+	        navigator.geolocation.getCurrentPosition(showPosition);
+			function showPosition(position) 
+			{
+				var coords = position.coords.latitude + ',' + position.coords.longitude;
+			    console.log('coords=' + coords)
+				angular.element(document.querySelector('[ng-controller="appCtrl"]')).scope().set_location(coords);
+			}
 			
 		</script>
 	</body>
