--- a/home/index.html
+++ b/home/index.html
@@ -133,7 +133,7 @@
 									<div class="row mt-1">
 										<div class="col">
 											<label class="form-label">Tell me about a new pint price<!--Ask me about pint prices or tell me about a new one-->
-												<!--a href="#" class="link-info text-decoration-none" data-bs-toggle="collapse" data-bs-target="#agent_info">
+												<a href="#" class="link-info text-decoration-none" data-bs-toggle="collapse" data-bs-target="#agent_info">
 													<span class="ms-2">
 														<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-square text-secondary" viewBox="0 0 16 16">
 														  <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -141,7 +141,7 @@
 														</svg>
 													</span>
 												</a>
-												<span id="agent_info" class="collapse text-secondary ms-1">You can say things like...</span-->
+												<span id="agent_info" class="collapse text-secondary ms-1">Don't get offended if this does not work... it might work but the call to the server may have timedout, it will quite possibly do something stupid, also likely the money may have run out!</span>
 											</span>
 										</div>
 									</div>
