--- a/home/index.html
+++ b/home/index.html
@@ -8,9 +8,11 @@
 
 		<meta name="author" content="Martin Keys">
 		<meta property="og:title" content="How Much Is a Pint"/>
-		<meta name="description" content="How much is a good old British pint of beer" />
+		<meta name="og:description" content="How much is a good old British pint of beer" />
 		<meta property="og:description" content="How much is a good old British pint of beer"/>
-		<meta property="og:image" content="img/logo.png"/>
+		<meta property="og:image" content="https://howmuchisapint.com/img/logo.png"/>
+		<meta property="og:url" content=""https://howmuchisapint.com"/>
+		<meta property="og:type" content="website" />
 
 		<link rel="icon" type="image/png" href="img/pint.png"/>
 	</head>
