--- a/home/index.html
+++ b/home/index.html
@@ -112,7 +112,7 @@
 										<div class="col">
 											<h4>
 												<span ng-show="working_head_stats" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
-												<span ng-show="!working_head_stats" class="text-warning">{{head_stat_tot}} ({{head_stat_totyr}} this year)</span>
+												<span ng-show="!working_head_stats" class="text-warning">{{head_stat_tot}} ({{head_stat_tot2}})</span>
 												<span class="text-warning">pint prices in</span>
 												<span ng-show="working_head_stats" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
 												<span ng-show="!working_head_stats">
@@ -402,10 +402,10 @@
 										</div>
 										<div ng-show="!working_get_prices && price_stat_data['beer-price-stats'].length>0">
 											<div ng:repeat="r in sorted_price_stat_data = price_stat_data['beer-price-stats'] | orderBy: ['pub.type','beer.type','pub']">
-												<div data-bs-toggle="collapse" data-bs-target="#{{'pricestat_' + $index}}">
+												<div data-bs-toggle="collapse" data-bs-target="#{{'pricestat1_' + $index}}">
 													<div class="row mt-0">
 														<div class="col">
-															<span class="text-info">{{r.beer.type}} in {{r.pub.type}}s is {{frm_prices.display_ccy_symbol}}{{get_number_display((sorted_price_stat_data_year = r['by-year'] | orderBy: ['year']:true)[0]['avg-price'] / frm_prices.display_fxrate, 2)}}
+															<span ng-show="r['recent-count']>0" class="text-info">{{r.beer.type}} in {{r.pub.type}}s is {{frm_prices.display_ccy_symbol}}{{get_number_display(r['recent-avg-price'] / frm_prices.display_fxrate, 2)}}
 																<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrows-expand" viewBox="0 0 16 16">
 																  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 8zM7.646.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 1.707V5.5a.5.5 0 0 1-1 0V1.707L6.354 2.854a.5.5 0 1 1-.708-.708l2-2zM8 10a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 14.293V10.5A.5.5 0 0 1 8 10z"/>
 																</svg>
@@ -413,7 +413,29 @@
 														</div>
 													</div>
 												</div>
-												<div id="{{'pricestat_' + $index}}" class="collapse">
+												<div id="{{'pricestat1_' + $index}}" class="collapse">
+													<div ng:repeat="y in sorted_price_stat_data_year = r['by-year'] | orderBy: ['year']:true">
+														<div class="row mt-0">
+															<div class="col">
+																<span class="text-muted">{{frm_prices.display_ccy_symbol}}{{get_number_display(y['avg-price'] / frm_prices.display_fxrate, 2)}} from {{get_number_display(y.count,0)}} prices {{get_years_ago_display(y.year)}}</span>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div ng:repeat="r in sorted_price_stat_data = price_stat_data['beer-price-stats'] | orderBy: ['pub.type','beer.type','pub']">
+												<div data-bs-toggle="collapse" data-bs-target="#{{'pricestat2_' + $index}}">
+													<div class="row mt-0">
+														<div class="col">
+															<span ng-show="r['recent-count']==0" class="text-info">{{r.beer.type}} in {{r.pub.type}}s has no recent prices
+																<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrows-expand" viewBox="0 0 16 16">
+																  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 8zM7.646.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 1.707V5.5a.5.5 0 0 1-1 0V1.707L6.354 2.854a.5.5 0 1 1-.708-.708l2-2zM8 10a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 14.293V10.5A.5.5 0 0 1 8 10z"/>
+																</svg>
+															</span>
+														</div>
+													</div>
+												</div>
+												<div id="{{'pricestat2_' + $index}}" class="collapse">
 													<div ng:repeat="y in sorted_price_stat_data_year = r['by-year'] | orderBy: ['year']:true">
 														<div class="row mt-0">
 															<div class="col">
@@ -979,33 +1001,36 @@
 							{
 								$scope.head_stat_avgs = 'Be the first to submit a pub pint price in ' & $scope.home_city;
 								$scope.head_stat_tot = 0;
-								$scope.head_stat_totyr = 0;
+								$scope.head_stat_tot2 = '';
 							}
 							else
 							{
 								$scope.head_stat_avgs = '';
-								var frst = true;
-								var tot = 0;
+								$scope.head_stat_tot = 0;
 								for (i = 0; i < stats.length; i++)
 								{
-									tot = tot + stats[i]['count'];
+									$scope.head_stat_tot = $scope.head_stat_tot + stats[i]['count'];
 								}
-								$scope.head_stat_tot = tot
+								totyr = 0;
+								minyr = ''
 								for (i = 0; i < stats.length; i++)
 								{
-									for (y = 0; y < stats[i]['by-year'].length; y++)
+									totyr = totyr + stats[i]['recent-count'];
+									if (minyr == '' || stats[i]['recent-min-date'] < minyr)
 									{
-										if (stats[i]['by-year'][y]['year'] == new Date().getFullYear())
-										{
-											$scope.head_stat_totyr = stats[i]['by-year'][y]['count']
-											if (!frst)
-											{	
-												$scope.head_stat_avgs = $scope.head_stat_avgs + ', ';
-											}
-											$scope.head_stat_avgs = $scope.head_stat_avgs + stats[i]['beer']['type'] + ' is ' + $scope.home_ccy_symbol + $scope.get_number_display(stats[i]['by-year'][y]['avg-price'], 2);
-											frst = false;
-										}
+										minyr = stats[i]['recent-min-date']
 									}
+								}
+								$scope.head_stat_tot2 = totyr + ' recently' //' since ' + $scope.get_date_display(minyr);
+								var frst = true;
+								for (i = 0; i < stats.length; i++)
+								{
+									if (!frst)
+									{	
+										$scope.head_stat_avgs = $scope.head_stat_avgs + ', ';
+									}
+									$scope.head_stat_avgs = $scope.head_stat_avgs + stats[i]['beer']['type'] + ' is ' + $scope.home_ccy_symbol + $scope.get_number_display(stats[i]['recent-avg-price'], 2);
+									frst = false;
 								}
 /*								if ($scope.home_country == 'United Kingdom')
 								{
@@ -1396,19 +1421,12 @@
 							$scope.price_stat_data = response.data;
 							var tot = 0;
 							var yrtot = 0;
-							yr = new Date().getFullYear()
 							for (p in response.data['beer-price-stats'])
 							{
-								for (s in response.data['beer-price-stats'][p]['by-year'])
-								{
-									if (yr - response.data['beer-price-stats'][p]['by-year'][s].year == 0)
-									{
-										yrtot = yrtot + response.data['beer-price-stats'][p]['by-year'][s].count;
-									}
-								}
 								tot = tot + response.data['beer-price-stats'][p].count;
+								yrtot = yrtot + response.data['beer-price-stats'][p]['recent-count'];
 							}
-							$scope.get_prices_info = response.data['beer-price-stats'].length + ' summaries from ' + tot + ' prices (' + yrtot + ' this year) ' + $scope.prices_criteria();
+							$scope.get_prices_info = response.data['beer-price-stats'].length + ' summaries from ' + tot + ' prices (' + yrtot + ' recently) ' + $scope.prices_criteria();
 							$scope.working_get_prices = false;
 						}, 
 						function(response) 
