--- a/home/index.html
+++ b/home/index.html
@@ -125,7 +125,7 @@
 									</div>
 									<div class="row mt-2" >
 										<div class="col">
-											<span>This year in pubs, {{head_stat_avgs}}</span>
+											<span>Recently in pubs, {{head_stat_avgs}}</span>
 										</div>
 									</div>
 									<div class="row mt-4">
@@ -505,10 +505,10 @@
 			<div class="p-3 text-light bg-dark">
 				<div class="row mb-1">
 					<div class="col">
-						<span class="float-start"><a href="mailto:hello@conceptintegral.com" class="link-secondary text-decoration-none">hello@conceptintegral.com</a></span>
+						<span class="float-start"><a href="mailto:hello@conceptintegral.com" class="link-secondary text-decoration-none">hello@howmuchisapint.com</a></span>
 					</div>
 					<div class="col">
-						<span class="float-end text-secondary">&copy; 2022 <a href="https://www.conceptintegral.com" class="link-secondary text-decoration-none">Concept Integral</a></span>
+						<span class="float-end text-secondary">&copy; 2026 <a href="https://www.howmuchisapint.com" class="link-secondary text-decoration-none">Concept Integral</a></span>
 					</div>
 				</div>
 			</span>
